# asimov.py

./: .gitattributes  .gitignore  CHANGES.md  Cargo.toml  Makefile  README.md  VERSION  pyproject.toml  setup.cfg
.config/: mkdocs.yaml
docs/: api.md
src/: lib.rs  util.rs
src/asimov/: __init__.py  sdk.pyi
src/asimov/sdk/: __init__.py  abi.py  lib.py
src/directory/: config_directory.rs  config_profile.rs  module_directory.rs  module_iterators.rs  program_directory.rs  state_directory.rs
tests/unit_tests/: test_module_registry.py
