# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov_py"
version = "26.0.0-dev.1"
edition = "2024"

[lib]
name = "asimov"
crate-type = ["cdylib"]

[features]
default = ["all", "std"]
all = []
std = ["asimov/std", "derive_more/std"]

[dependencies]
asimov = { package = "asimov-sdk", version = "25.1.0", default-features = false, features = [] }
derive_more = { version = "2", default-features = false, features = ["display"] }
pyo3 = { version = "0.27", default-features = false, features = ["extension-module", "macros"] }
